--- a/res/layout/fragment_screen_slide_page.xml
+++ b/res/layout/fragment_screen_slide_page.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/content"
     android:layout_width="match_parent"
@@ -18,7 +19,9 @@
          	android:layout_alignParentTop="true"
          	android:layout_centerHorizontal="true"
          	android:layout_centerInParent="false"
-         	android:layout_marginTop="1dp" />
+         	android:layout_marginTop="1dp" 
+         	android:contentDescription="@string/description"
+         	/>
         
         <TextView android:id="@android:id/text1"
             style="?android:textAppearanceLarge"
@@ -53,7 +56,7 @@
          	android:layout_marginRight="5dp"
          	android:layout_marginTop="15dp"
          	android:background="@android:drawable/btn_default"
-         	android:text="Saw it!"
+         	android:text="@string/sawIt"
          	android:width="120dp" /> 
          	
 
@@ -68,7 +71,9 @@
         android:id="@+id/expanded_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible" />
+        android:visibility="invisible" 
+        android:contentDescription="@string/description"
+        />
 
 
 </FrameLayout>
