--- a/res/layout/fragment_screen_slide_page_landscape.xml
+++ b/res/layout/fragment_screen_slide_page_landscape.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/content"
     android:layout_width="match_parent"
@@ -21,7 +22,7 @@
          	android:layout_marginRight="5dp"
          	android:layout_marginTop="5dp"
          	android:background="@android:drawable/btn_default"
-         	android:text="Saw it!"
+         	android:text="@string/sawIt"
          	android:width="120dp" /> 
          	
         <ImageButton
@@ -30,7 +31,9 @@
          	android:layout_height="wrap_content"
          	android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="-1dp"  />
+            android:layout_marginLeft="-1dp"  
+            android:contentDescription="@string/description"
+            />
   
         <TextView android:id="@android:id/text1"
             style="?android:textAppearanceLarge"
@@ -71,7 +74,9 @@
         android:id="@+id/expanded_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible" />
+        android:visibility="invisible" 
+        android:contentDescription="@string/description"
+        />
     
 </FrameLayout>
 
