--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sicon_faded"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -14,8 +14,7 @@
         android:id="@+id/TextEmail"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dip"
-        android:background="@android:drawable/editbox_background"
+        android:layout_marginTop="10dip"
         android:hint="@string/textview_email"
         android:inputType="textEmailAddress" />
 
@@ -24,8 +23,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/TextEmail"
-        android:layout_marginTop="5dip"
-        android:background="@android:drawable/editbox_background"
+        android:layout_marginTop="10dip"
         android:hint="@string/textview_password"
         android:inputType="textPassword" />
 
@@ -34,7 +32,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/TextPassword"
-        android:layout_marginTop="20dip"
+        android:layout_marginTop="25dip"
         android:onClick="checkLogin"
         android:text="@string/button_login" />
 
