--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="match_parent"
+    tools:context=".LoginActivity" >
+
+<RelativeLayout 
+    android:layout_width="match_parent" 
     android:layout_height="match_parent"
     android:background="@drawable/sicon_faded"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".LoginActivity" >
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <EditText
-        android:id="@+id/TextEmail"
+        android:id="@+id/TextUsername"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dip"
-        android:hint="@string/textview_email"
-        android:inputType="textEmailAddress" />
+        android:layout_marginTop="15dip"
+        android:hint="@string/textview_username" />
 
     <EditText
         android:id="@+id/TextPassword"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/TextEmail"
+        android:layout_below="@id/TextUsername"
         android:layout_marginTop="10dip"
         android:hint="@string/textview_password"
         android:inputType="textPassword" />
@@ -32,7 +35,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/TextPassword"
-        android:layout_marginTop="25dip"
+        android:layout_marginTop="45dip"
         android:onClick="checkLogin"
         android:text="@string/button_login" />
 
@@ -43,10 +46,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/buttonLogin"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dip"
+        android:layout_marginTop="70dip"
         android:onClick="sendToRegister"
         android:text="@string/button_registeration"
         android:textSize="12sp" />
 
 </RelativeLayout>
-
+</ScrollView>
