--- a/res/layout/activity_photo.xml
+++ b/res/layout/activity_photo.xml
@@ -31,9 +31,13 @@
         android:onClick="sendToServer" />
   </LinearLayout>
   <ImageView 
-      android:layout_height="wrap_content" 
-      android:layout_width="wrap_content" 
+	  android:layout_height="wrap_content" 
+	  android:layout_width="wrap_content" 
       android:visibility="visible"
       android:id="@+id/imageView1" />
 
 </LinearLayout>
+
+<!--       android:gravity="center"
+      android:paddingTop="10dp"
+      android:paddingBottom="20dp" -->
