--- a/res/layout/fragment_screen_slide_page.xml
+++ b/res/layout/fragment_screen_slide_page.xml
@@ -33,19 +33,21 @@
          	android:layout_marginTop="5dp"
          	android:gravity="center|center_horizontal"/>
         
-        <TextView android:id="@android:id/text2" 
+        <TextView
+            android:id="@android:id/text2"
             style="?android:textAppearanceMedium"
-            android:lineSpacingMultiplier="1.2"
             android:layout_width="wrap_content"
-         	android:layout_height="wrap_content"
-         	android:layout_alignLeft="@+id/imageView1"
-         	android:layout_below="@android:id/text1"
-         	android:layout_marginTop="5dp"
-         	android:enabled="false"
-         	android:includeFontPadding="false"
-         	android:scrollHorizontally="false"
-         	android:width="320dp" 
-         	android:textColor="#5A5A5A" />
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/imageView1"
+            android:layout_below="@android:id/text1"
+            android:layout_marginTop="5dp"
+            android:enabled="false"
+            android:includeFontPadding="false"
+            android:lineSpacingMultiplier="1.2"
+            android:scrollHorizontally="false"
+            android:textColor="#5A5A5A"
+            android:textSize="17sp"
+            android:width="320dp" />
         
         <Button
          	android:id="@+id/button1"
