--- a/res/layout/activity_cover_page.xml
+++ b/res/layout/activity_cover_page.xml
@@ -81,18 +81,27 @@
         android:layout_marginTop="10dp"
         android:text="@string/first_page_6"
         android:textSize="16sp" />
+    
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView6"
+        android:layout_marginTop="10dp"
+        android:text="@string/first_page_7"
+        android:textSize="16sp" />    
 
     <Button
         android:id="@+id/button_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView6"
+        android:layout_below="@+id/textView7"
         android:layout_centerHorizontal="true"
         android:background="@android:drawable/btn_default"
         android:layout_marginTop="5dp"
         android:text="@string/start"
-        android:onClick="sendToLoginPage"
-        android:width="120dp" />
+        android:onClick="sendToNextPage"
+        android:width="320dp" />
 
 </RelativeLayout>
 </ScrollView>
