--- a/res/menu/activity_screen_slide.xml
+++ b/res/menu/activity_screen_slide.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!-- Adds an item to the list. -->
-    <item android:id="@+id/action_previous"
-        android:title="@string/action_previous"
-        android:showAsAction="ifRoom|withText" />  
+    <item
+        android:id="@+id/action_previous"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/action_previous"/>
     <item
         android:id="@+id/action_info"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_info"/>      
+        android:title="@string/action_info"/>
+    <item
+        android:id="@+id/action_instructions"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_instructions"/>
     <item
         android:id="@+id/action_signout"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_signout"/>
+
 </menu>
