--- a/res/menu/activity_screen_slide.xml
+++ b/res/menu/activity_screen_slide.xml
@@ -7,6 +7,11 @@
         android:showAsAction="ifRoom|withText"
         android:title="@string/action_previous"/>
     <item
+        android:id="@+id/action_send_saved_sightings"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_send_saved_sightings"/>    
+    <item
         android:id="@+id/action_info"
         android:orderInCategory="100"
         android:showAsAction="never"
