--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
 
 <RelativeLayout 
     android:layout_width="match_parent" 
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/sicon_faded"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -35,18 +35,17 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/TextPassword"
-        android:layout_marginTop="45dip"
+        android:layout_marginTop="40dip"
         android:onClick="checkLogin"
         android:text="@string/button_login" />
 
     <Button
         android:id="@+id/buttonRegister"
-        style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/buttonLogin"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dip"
+        android:layout_marginTop="35dip"
         android:onClick="sendToRegister"
         android:text="@string/button_registeration"
         android:textSize="12sp" />
