--- a/res/layout/fragment_screen_slide_page.xml
+++ b/res/layout/fragment_screen_slide_page.xml
@@ -5,18 +5,16 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
-
 <FrameLayout 
     android:id="@+id/content"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content" >
 
-    <!-- Dummy content. -->
     <RelativeLayout android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp"
-        android:layout_marginTop="1dp"  >
+        android:layout_marginTop="1dp" >
 
         <ImageButton
          	android:id="@+id/imageView1"
@@ -26,14 +24,23 @@
          	android:layout_centerHorizontal="true"
          	android:layout_centerInParent="false"
          	android:layout_marginTop="1dp" 
-         	android:contentDescription="@string/description"
-         	/>
+         	android:contentDescription="@string/description" />
 
+    	<Button
+        	android:id="@+id/buttonPhotoBy"
+        	style="?android:attr/borderlessButtonStyle"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:layout_below="@id/imageView1"
+        	android:layout_centerHorizontal="true"
+        	android:layout_marginTop="2dp"
+        	android:textSize="12sp" />
+        
         <Button
          	android:id="@+id/button1"
          	android:layout_width="wrap_content"
          	android:layout_height="wrap_content"
-         	android:layout_below="@+id/imageView1"
+         	android:layout_below="@+id/buttonPhotoBy"
          	android:layout_marginTop="10dp"
          	android:layout_centerHorizontal="true"
          	android:background="@android:drawable/btn_default"
@@ -48,9 +55,8 @@
          	android:layout_below="@+id/button1"
          	android:layout_centerHorizontal="true"
          	android:layout_marginTop="5dp"
-         	android:gravity="center|center_horizontal"/>
-        
-        
+         	android:gravity="center|center_horizontal" />
+             
         <TextView
             android:id="@android:id/text2"
             style="?android:textAppearanceMedium"
@@ -65,10 +71,7 @@
             android:textSize="17sp"
             android:width="320dp" 
             android:autoLink="all"
-    		android:linksClickable="true"/>
-        
-
-         	
+    		android:linksClickable="true" />
 
     </RelativeLayout>
     
@@ -82,9 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible" 
-        android:contentDescription="@string/description"
-        />
-
+        android:contentDescription="@string/description" />
 
 </FrameLayout>
 
