--- a/res/layout/fragment_screen_slide_page_landscape.xml
+++ b/res/layout/fragment_screen_slide_page_landscape.xml
@@ -46,7 +46,8 @@
         	android:layout_marginTop="2dp"
         	android:onClick="sendToWebView" 
         	android:text="@string/photoby1"
-        	android:textSize="12sp" />
+        	android:textColor="@color/textlink"
+        	android:textSize="14sp" />
   
         <TextView android:id="@android:id/text1"
             style="?android:textAppearanceLarge"
