--- a/res/layout/fragment_screen_slide_page_landscape.xml
+++ b/res/layout/fragment_screen_slide_page_landscape.xml
@@ -40,9 +40,9 @@
         	android:id="@+id/buttonPhototakenBy"
         	style="?android:attr/borderlessButtonStyle"
         	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
+        	android:layout_height="20dp"
         	android:layout_below="@id/imageView1"
-        	android:layout_marginTop="0dp"
+        	android:layout_marginTop="2dp"
         	android:onClick="sendToWebView" 
         	android:text="@string/photoby1"
         	android:textColor="@color/textlink"
