--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -19,7 +19,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dip"
-        android:hint="@string/textview_username" />
+        android:hint="@string/textview_username"
+        android:inputType="textNoSuggestions" />
 
     <EditText
         android:id="@+id/TextPassword"
