--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -22,7 +22,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:hint="@string/textview_firstname"
-        android:inputType="text" />
+        android:inputType="textNoSuggestions" />
 
 <!--      android:background="@android:drawable/editbox_background" -->
 
@@ -34,7 +34,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:hint="@string/textview_lastname"
-        android:inputType="text" />
+        android:inputType="textNoSuggestions" />
 
     <EditText
         android:id="@+id/email_input"
@@ -53,7 +53,8 @@
         android:layout_below="@+id/email_input"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:hint="@string/textview_username"/>
+        android:hint="@string/textview_username"
+        android:inputType="textNoSuggestions"/>
 
     <EditText
         android:id="@+id/password_input"
