--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="textlink">#780622</color>
+    <color name="textlink">#9A9191</color>
 </resources>
