--- a/res/layout/fragment_screen_slide_page.xml
+++ b/res/layout/fragment_screen_slide_page.xml
@@ -26,9 +26,9 @@
          	android:layout_marginTop="1dp" 
          	android:contentDescription="@string/description" />
 
+        <!--  style="?android:attr/borderlessButtonStyle"-->
     	<Button
     	    android:id="@+id/buttonPhototakenBy"
-    	    style="?android:attr/borderlessButtonStyle"
     	    android:layout_width="wrap_content"
     	    android:layout_height="20dp"
     	    android:layout_below="@id/imageView1"
