--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="textlink">#837C7C</color>
+    <color name="textlink">#898282</color>
 </resources>
-<!-- 9A9191 -->
+<!-- 9A9191 837C7C-->
